external-crates/move/crates/move-cli/tests/build_tests/migration_with_blocking_errors/args.exp
Command `migrate`:
Package toml does not specify an edition. As of 2024, Move requires all packages to define a language edition.

Please select one of the following editions:

1) 2024
2) legacy

Selection (default=1): 

Would you like the Move compiler to migrate your code to Move 2024? (Y/n) 
Generated changes . . .
INCLUDING DEPENDENCY MoveStdlib
BUILDING A
Unable to generate migration patch due to compilation errors.
Please fix the errors in your current edition before attempting to migrate.
error[E03006]: unexpected name in this position
  ┌─ ./sources/mod1.move:5:9
  │
5 │         mod0::mod0::f();
  │         ^^^^ Expected an address in this position, not a module

error[E04007]: incompatible types
   ┌─ ./sources/mod.move:12:13
   │
11 │     entry fun t0(x: u64, s: Positional): u64 {
   │                             ---------- Expected: '(A=0x1)::mod0::Positional'
12 │         let S { f: fin } = s;
   │             ^^^^^^^^^^^^
   │             │
   │             Invalid deconstruction binding
   │             Given: '(A=0x1)::mod0::S'

Error: Compilation error
External Command `diff -s Move.toml Move.toml.expected`:
Files Move.toml and Move.toml.expected are identical
